added news and our work pages

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css"
         integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
     <title>موقع إبداع تك للبرمجيات</title>
+    <link rel="stylesheet" href="css/style.css">
+
     <link rel="shortcut icon" href="imgs/footer-logo2.png" />
 
     <!--font-->
@@ -27,7 +28,7 @@
 <body>
 
     <nav class="navbar navbar-colaps-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="imgs/logo2.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -38,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">الرئيسية <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="our-work.html">أعمالنا</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="news.html">المقالات</a>
                 </li>
             </ul>
         </div>
@@ -167,88 +168,85 @@
     </section>
     <h2 class="header" style="margin-top: 150px;">بعض أعمالنا</h2>
     <div class="line"></div>
+
     <!--our work-->
     <section class="our-work">
-
-
         .<div class="container">
             <div class="row ">
-                <a href="">
-                    <div class="col-sm-4">
+
+                <div class="col-sm-4">
+                    <a href="">
                         <div class="card card-our-work">
                             <img src="imgs/3dl.jpg" class="card-img-top card-img-our-work" alt="...">
                             <div class="card-body">
                                 <p class="card-text">تطبيق سوشي</p>
                             </div>
                         </div>
-                    </div>
-                </a>
-
-                <a href="">
-                    <div class="col-sm-4">
-                        <div class="card card-our-work">
-                            <img src="imgs/blood-bank.jpg" class="card-img-top card-img-our-work" alt="...">
-                            <div class="card-body">
-                                <p class="card-text">بنك الدم</p>
-                            </div>
+                    </a>
+                </div>
+                <div class="col-sm-4">
+                    <a href=""></a>
+                    <div class="card card-our-work">
+                        <img src="imgs/blood-bank.jpg" class="card-img-top card-img-our-work" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">بنك الدم</p>
                         </div>
                     </div>
-                </a>
-
-                <a href="">
-                    <div class="col-sm-4">
+                    </a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="">
                         <div class="card card-our-work">
                             <img src="imgs/engz.jpg" class="card-img-top card-img-our-work" alt="...">
                             <div class="card-body">
                                 <p class="card-text">موقع النسر.</p>
                             </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
 
             <div class="row ">
-                <a href="">
-                    <div class="col-sm-4">
+                
+                <div class="col-sm-4">
+                    <a href="">
                         <div class="card card-our-work">
                             <img src="imgs/3dl.jpg" class="card-img-top card-img-our-work" alt="...">
                             <div class="card-body">
                                 <p class="card-text">تطبيق سوشي</p>
                             </div>
                         </div>
-                    </div>
-                </a>
-
-                <a href="">
-                    <div class="col-sm-4">
-                        <div class="card card-our-work">
-                            <img src="imgs/blood-bank.jpg" class="card-img-top card-img-our-work" alt="...">
-                            <div class="card-body">
-                                <p class="card-text">بنك الدم</p>
-                            </div>
+                    </a>
+                </div>
+                <div class="col-sm-4">
+                    <a href=""></a>
+                    <div class="card card-our-work">
+                        <img src="imgs/blood-bank.jpg" class="card-img-top card-img-our-work" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">بنك الدم</p>
                         </div>
                     </div>
-                </a>
-
-                <a href="">
-                    <div class="col-sm-4">
+                    </a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="">
                         <div class="card card-our-work">
                             <img src="imgs/engz.jpg" class="card-img-top card-img-our-work" alt="...">
                             <div class="card-body">
                                 <p class="card-text">موقع النسر.</p>
                             </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
         </div>
         <div class="btn-div">
-            <a href=""> <button class="btn btn-secondary btn-lg our-work-btn"> شاهد كل أعمالنا</button></a>
+            <a href="our-work.html"> <button class="btn btn-secondary btn-lg our-work-btn"> شاهد كل أعمالنا</button></a>
 
         </div>
     </section>
 
-<!--news-->
+    <!--news-->
     <section class="news">
         <div class="container">
             <div class="news-contaier">
@@ -260,7 +258,7 @@
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
                                 <a href="#" class="btn btn-primary news-btn">إقرأ الآن</a>
-                                <i class="fa fa-eye news-seen" >200</i>
+                                <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
                     </div>
@@ -272,7 +270,7 @@
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
                                 <a href="#" class="btn btn-primary  news-btn">إقرأ الآن</a>
-                                <i class="fa fa-eye news-seen" >200</i>
+                                <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
                     </div>
@@ -285,7 +283,7 @@
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
                                 <a href="#" class="btn btn-primary news-btn">إقرأ الآن</a>
-                                <i class="fa fa-eye news-seen" >200</i>
+                                <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
 
@@ -298,7 +296,7 @@
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
                                 <a href="#" class="btn btn-primary  news-btn">إقرأ الآن</a>
-                                <i class="fa fa-eye news-seen" >200</i>
+                                <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
                     </div>
@@ -306,7 +304,8 @@
             </div>
         </div>
         <div class="btn-div">
-            <a href=""> <button class="btn btn-secondary btn-lg our-work-btn" style="margin-top: 0; width:250px;">
+            <a href="news.html"> <button class="btn btn-secondary btn-lg our-work-btn"
+                    style="margin-top: 0; width:250px;">
                     المزيد</button></a>
 
         </div>
