full project without carousel in page 4

--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
 
     <!--our work-->
     <section class="our-work">
-        .<div class="container">
+        <div class="container">
             <div class="row ">
 
                 <div class="col-sm-4">
-                    <a href="">
+                    <a href="one-app.html">
                         <div class="card card-our-work">
                             <img src="imgs/3dl.jpg" class="card-img-top card-img-our-work" alt="...">
                             <div class="card-body">
@@ -185,7 +185,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href=""></a>
+                    <a href="one-app.html">
                     <div class="card card-our-work">
                         <img src="imgs/blood-bank.jpg" class="card-img-top card-img-our-work" alt="...">
                         <div class="card-body">
@@ -195,11 +195,11 @@
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="">
+                    <a href="one-app.html">
                         <div class="card card-our-work">
                             <img src="imgs/engz.jpg" class="card-img-top card-img-our-work" alt="...">
                             <div class="card-body">
-                                <p class="card-text">موقع النسر.</p>
+                                <p class="card-text">موقع النسر</p>
                             </div>
                         </div>
                     </a>
@@ -209,7 +209,7 @@
             <div class="row ">
                 
                 <div class="col-sm-4">
-                    <a href="">
+                    <a href="one-app.html">
                         <div class="card card-our-work">
                             <img src="imgs/3dl.jpg" class="card-img-top card-img-our-work" alt="...">
                             <div class="card-body">
@@ -219,7 +219,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href=""></a>
+                    <a href="one-app.html">
                     <div class="card card-our-work">
                         <img src="imgs/blood-bank.jpg" class="card-img-top card-img-our-work" alt="...">
                         <div class="card-body">
@@ -229,11 +229,11 @@
                     </a>
                 </div>
                 <div class="col-sm-4">
-                    <a href="">
+                    <a href="one-app.html">
                         <div class="card card-our-work">
                             <img src="imgs/engz.jpg" class="card-img-top card-img-our-work" alt="...">
                             <div class="card-body">
-                                <p class="card-text">موقع النسر.</p>
+                                <p class="card-text">موقع النسر</p>
                             </div>
                         </div>
                     </a>
@@ -269,7 +269,7 @@
                             <div class="card-body">
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
-                                <a href="#" class="btn btn-primary  news-btn">إقرأ الآن</a>
+                                <a href="news-details.html" class="btn btn-primary  news-btn">إقرأ الآن</a>
                                 <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
@@ -282,7 +282,7 @@
                             <div class="card-body">
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
-                                <a href="#" class="btn btn-primary news-btn">إقرأ الآن</a>
+                                <a href="news-details.html" class="btn btn-primary news-btn">إقرأ الآن</a>
                                 <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
