--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="imgs/footer-logo2.png" />
 
 
 </head>
@@ -52,7 +53,7 @@
                             <div class="card-body">
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
-                                <a href="#" class="btn btn-primary news-btn">إقرأ الآن</a>
+                                <a href="news-details.html" class="btn btn-primary news-btn">إقرأ الآن</a>
                                 <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
@@ -64,7 +65,7 @@
                             <div class="card-body">
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
-                                <a href="#" class="btn btn-primary  news-btn">إقرأ الآن</a>
+                                <a href="news-details.html" class="btn btn-primary  news-btn">إقرأ الآن</a>
                                 <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
@@ -77,7 +78,7 @@
                             <div class="card-body">
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
-                                <a href="#" class="btn btn-primary news-btn">إقرأ الآن</a>
+                                <a href="news-details.html" class="btn btn-primary news-btn">إقرأ الآن</a>
                                 <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
@@ -90,7 +91,7 @@
                             <div class="card-body">
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
-                                <a href="#" class="btn btn-primary  news-btn">إقرأ الآن</a>
+                                <a href="news-details.html" class="btn btn-primary  news-btn">إقرأ الآن</a>
                                 <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
@@ -104,7 +105,7 @@
                             <div class="card-body">
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
-                                <a href="#" class="btn btn-primary news-btn">إقرأ الآن</a>
+                                <a href="news-details.html" class="btn btn-primary news-btn">إقرأ الآن</a>
                                 <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
@@ -117,7 +118,7 @@
                             <div class="card-body">
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
-                                <a href="#" class="btn btn-primary  news-btn">إقرأ الآن</a>
+                                <a href="news-details.html" class="btn btn-primary  news-btn">إقرأ الآن</a>
                                 <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
