full project, need to modify carousel

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>موقع إبداع تك للبرمجيات</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css"
         integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous">
-    <title>موقع إبداع تك للبرمجيات</title>
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="shortcut icon" href="imgs/footer-logo2.png" />
@@ -186,12 +186,12 @@
                 </div>
                 <div class="col-sm-4">
                     <a href="one-app.html">
-                    <div class="card card-our-work">
-                        <img src="imgs/blood-bank.jpg" class="card-img-top card-img-our-work" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">بنك الدم</p>
+                        <div class="card card-our-work">
+                            <img src="imgs/blood-bank.jpg" class="card-img-top card-img-our-work" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">بنك الدم</p>
+                            </div>
                         </div>
-                    </div>
                     </a>
                 </div>
                 <div class="col-sm-4">
@@ -207,7 +207,7 @@
             </div>
 
             <div class="row ">
-                
+
                 <div class="col-sm-4">
                     <a href="one-app.html">
                         <div class="card card-our-work">
@@ -220,12 +220,12 @@
                 </div>
                 <div class="col-sm-4">
                     <a href="one-app.html">
-                    <div class="card card-our-work">
-                        <img src="imgs/blood-bank.jpg" class="card-img-top card-img-our-work" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">بنك الدم</p>
+                        <div class="card card-our-work">
+                            <img src="imgs/blood-bank.jpg" class="card-img-top card-img-our-work" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">بنك الدم</p>
+                            </div>
                         </div>
-                    </div>
                     </a>
                 </div>
                 <div class="col-sm-4">
@@ -262,8 +262,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 offset-sm-2">
                         <div class="shadow p-3 mb-5 bg-white card card-news">
                             <img src="imgs/web.jpg" class="card-img-top news-img" alt="...">
                             <div class="card-body">
@@ -288,14 +287,13 @@
                         </div>
 
                     </div>
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 offset-sm-2">
                         <div class="shadow p-3 mb-5 bg-white card card-news">
                             <img src="imgs/web.jpg" class="card-img-top news-img" alt="...">
                             <div class="card-body">
                                 <p class="card-text">توقف دعم تطبيقات جاهز شركة Microsoft لتتبع اللياقة البدنية
                                     Microsoft Band</p>
-                                <a href="#" class="btn btn-primary  news-btn">إقرأ الآن</a>
+                                <a href="news-details.html" class="btn btn-primary  news-btn">إقرأ الآن</a>
                                 <i class="fa fa-eye news-seen">200</i>
                             </div>
                         </div>
@@ -363,8 +361,6 @@
     </section>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
