--- a/news.html
+++ b/news.html
@@ -58,8 +58,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 offset-sm-2">
                         <div class="shadow p-3 mb-5 bg-white card card-news">
                             <img src="imgs/web.jpg" class="card-img-top news-img" alt="...">
                             <div class="card-body">
@@ -84,8 +83,7 @@
                         </div>
 
                     </div>
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 offset-sm-2">
                         <div class="shadow p-3 mb-5 bg-white card card-news">
                             <img src="imgs/web.jpg" class="card-img-top news-img" alt="...">
                             <div class="card-body">
@@ -111,8 +109,7 @@
                         </div>
 
                     </div>
-                    <div class="col-sm-1"></div>
-                    <div class="col-sm-5">
+                    <div class="col-sm-5 offset-sm-2">
                         <div class="shadow p-3 mb-5 bg-white card card-news">
                             <img src="imgs/web.jpg" class="card-img-top news-img" alt="...">
                             <div class="card-body">
