--- a/one-app.html
+++ b/one-app.html
@@ -15,6 +15,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
+
+
 </head>
 
 <body>
@@ -47,6 +50,7 @@
             <h1>تطبيق وان</h1>
         </div>
         <img src="imgs/project-preview-header.png" alt="">
+
     </section>
 
 
@@ -54,26 +58,30 @@
         <h1>تفاصيل المشروع</h1>
     </div>
     <section class="details">
-        <p>لوريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل ليتصور طريقه وضع النصوص بالتصاميم سواء كانت تصاميم مطبوعه ... بروشور او فلاير على سبيل المثال ... او نماذج مواقع انترنت ...
+        <p>لوريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل ليتصور طريقه وضع النصوص بالتصاميم سواء كانت
+            تصاميم مطبوعه ... بروشور او فلاير على سبيل المثال ... او نماذج مواقع انترنت ...
 
-            وعند موافقه العميل المبدئيه على التصميم يتم ازالة هذا النص من التصميم ويتم وضع النصوص النهائية المطلوبة للتصميم ويقول البعض ان وضع النصوص التجريبية بالتصميم قد تشغل المشاهد عن وضع الكثير من الملاحظات او الانتقادات للتصميم الاساسي.
-            
-            وخلافاَ للاعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد. من كتاب "حول أقاصي الخير والشر"</p>
+            وعند موافقه العميل المبدئيه على التصميم يتم ازالة هذا النص من التصميم ويتم وضع النصوص النهائية المطلوبة
+            للتصميم ويقول البعض ان وضع النصوص التجريبية بالتصميم قد تشغل المشاهد عن وضع الكثير من الملاحظات او
+            الانتقادات للتصميم الاساسي.
+
+            وخلافاَ للاعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ
+            العام 45 قبل الميلاد. من كتاب "حول أقاصي الخير والشر"</p>
     </section>
     <section class="carousel">
-    <div class="our-work-h1">
-        <h1>خدلك لفة</h1>
-    </div>
-    <div class="card-carousel">
-          <div class="my-card"></div>
-          <div class="my-card"></div>
-          <div class="my-card"></div>
-          <div class="my-card"></div>
-          <div class="my-card"></div>
+        <div class="our-work-h1">
+            <h1>خدلك لفة</h1>
         </div>
-        
+        <div class="card-carousel">
+            <div class="my-card"><img src="imgs/slide-one.png" alt=""></div>
+            <div class="my-card"><img src="imgs/Slider-two.png" alt=""></div>
+            <div class="my-card"><img src="imgs/slider-three.png" alt=""></div>
+            <div class="my-card"><img src="imgs/Slider-four.png" alt=""></div>
+            <div class="my-card"><img src="imgs/slide-one.png" alt=""></div>
+        </div>
 
-</section>
+
+    </section>
     <!--footer-->
     <section class="footer">
         <div class="container-fluid">
@@ -89,7 +97,6 @@
                         <a href=""><i class="fa fa-facebook"></i> </a>
                         <a href=""><i class="fa fa-twitter"></i> </a>
                         <a href=""><i class="fa fa-github"></i> </a>
-
                     </div>
                 </div>
             </div>
@@ -98,25 +105,19 @@
 
 
 
-    <script src="js/script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://cdn.rtlcss.com/bootstrap/v4.2.1/js/bootstrap.min.js"
         integrity="sha384-a9xOd0rz8w0J8zqj1qJic7GPFfyMfoiuDjC9rqXlVOcGO/dmRqzMn34gZYDTel8k"
         crossorigin="anonymous"></script>
-
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
-        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" 
-        crossorigin="anonymous">
-</script> 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" 
-        integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" 
-        crossorigin="anonymous">
-</script> 
+    <script src="js/card-carousel.js"></script>
 </body>
 
 </html>
