--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
     <section class="about-us">
-        <h1 class="header">من نحن؟</h1>
+        <h2 class="header">من نحن؟</h2>
         <div class="line"></div>
         <div class="container-fluid">
             <div class="row">
@@ -77,11 +77,11 @@
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-6 text">
-                    <h3>إبداع تك هي شركة برمجيات مصرية بدأت عملها فى عام 2017 متخصصون فى تصميم و تطوير المواقع
+                    <h4>إبداع تك هي شركة برمجيات مصرية بدأت عملها فى عام 2017 متخصصون فى تصميم و تطوير المواقع
                         الالكترونية وبرامج المبيعات والبرامج الإدارية وبرمجة تطبيقات الهواتف ، راحة و إبهار عملائنا هو
                         ما يهمنا ، نؤمن بقوة الشباب ، و ندعم أفكارهم و بناء ونجاح مشاريعهم بكل ما نستطيع ، هكذا بدأ
                         الإبداع و سيستمر إن شاء الله ، فدع الفرصة لخبرائنا لمساعدتك في إنشاء موقعك الخاص بأحدث وأفضل
-                        التصميمات المبتكرة</h3>
+                        التصميمات المبتكرة</h4>
                 </div>
             </div>
         </div>
@@ -92,7 +92,7 @@
 
     <!--for you-->
     <section class="for-you ">
-        <div class="container-fluid">
+        <div class="container">
             <div class="owl-carousel for-you-carousel">
                 <a href="">
                     <div class="card card-for-you">
@@ -303,7 +303,7 @@
         </div>
         <div class="btn-div">
             <a href="news.html"> <button class="btn btn-secondary btn-lg our-work-btn"
-                    style="margin-top: 0; width:250px;">
+                    style="margin-top: 0; width:20%;">
                     المزيد</button></a>
 
         </div>
@@ -311,11 +311,10 @@
 
     <!--Our customer-->
 
-    <h1 class="header" style="margin-top: 150px;">عملاء نفتخر بهم</h1>
+    <h2 class="header" style="margin-top: 150px;">عملاء نفتخر بهم</h2>
     <div class="line"></div>
 
     <section class="our-customer">
-
         <div class="owl-carousel our-customer-carousel">
 
             <a href="">
